--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.16"
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
+    "sequelize": "^6.20.1"
   }
 }
